website/versioned_docs/version-3.0.0/Producing.md
---
id: version-3.0.0-producing
title: Producing Messages
original_id: producing
---

To publish messages to Kafka you have to create a producer. Simply call the `producer` function of the client to create it:

```javascript
const producer = kafka.producer()
```

or with options

```javascript
const producer = kafka.producer({
    allowAutoTopicCreation: false,
    transactionTimeout: 30000
})
```

## Options

| option                 | description                                                                                                                                                                                  | default              | type       | required |
| ---------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------- | ---------- | -------- |
| createPartitioner      | Take a look at [Custom Partitioner](#custom-partitioner) for more information                                                                                                                | `null`               | `Function` | No       |
| retry                  | Take a look at [Producer Retry](#retry) for more information                                                                                                                                 | `null`               | `Object`   | No       |
| metadataMaxAge         | The period of time in milliseconds after which we force a refresh of metadata even if we haven't seen any partition leadership changes to proactively discover any new brokers or partitions | `300000` (5 min)     | `Number`   | No       |
| allowAutoTopicCreation | Allow topic creation when querying metadata for non-existent topics                                                                                                                          | `true`               | `Boolean`  | No       |
| transactionTimeout | The maximum amount of time in ms that the transaction coordinator will wait for a transaction status update from the producer before proactively aborting the ongoing transaction. If this value is larger than the `transaction.max.timeout.ms` setting in the __broker__, the request will fail with a `InvalidTransactionTimeout` error | `60000`              | `Number`   | No       |
| idempotent         | If enabled, the producer will ensure each message is written exactly once. Acks _must_ be set to -1 ("all"). Retries will default to `MAX_SAFE_INTEGER`. See [Idempotent Producer](#idempotent-producer) | `false`              | `Boolean`  | No       |
| transactionalId    | The transactional ID to use for transactional delivery. Enables the producer to use transactions. See [Transactions](Transactions.md) | `undefined`          | `String`   | No       |
| maxInFlightRequests | Max number of requests that may be in progress at any time. If falsey then no limit. When using `idempotent: true`, this must be `<= 5` | `null` _(no limit)_ | `Number`   | No       |

> **New in v3.0.0:** The `transactionalId` option is now documented as a first-class producer option. Previously, it was only mentioned in the Transactions guide.
>
> **Deprecated:** The `Partitioners.JavaCompatiblePartitioner` was renamed to `Partitioners.DefaultPartitioner` in v2.0.0. Use `Partitioners.DefaultPartitioner` instead.
>
> **Deprecated:** The `Partitioners.LegacyPartitioner` was the default partitioner before v2.0.0. It is still available but no longer the default.

## Producing messages

The method `send` is used to publish messages to the Kafka cluster.

```javascript
const producer = kafka.producer()

await producer.connect()
await producer.send({
    topic: 'topic-name',
    messages: [
        { key: 'key1', value: 'hello world' },
        { key: 'key2', value: 'hey hey!' }
    ],
})
```

Example with a defined partition:

```javascript
const producer = kafka.producer()

await producer.connect()
await producer.send({
    topic: 'topic-name',
    messages: [
        { key: 'key1', value: 'hello world', partition: 0 },
        { key: 'key2', value: 'hey hey!', partition: 1 }
    ],
})
```

The method `send` has the following signature:

```javascript
await producer.send({
    topic: <String>,
    messages: <Message[]>,
    acks: <Number>,
    timeout: <Number>,
    compression: <CompressionTypes>,
})
```

| property           | description                                                                                                                                                                                                                                                                                                                                | default                            | type     | required |
| ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------- | -------- | -------- |
| topic              | Topic name                                                                                                                                                                                                                                                                                                                                 |                              | `String` | **Yes**  |
| messages           | An array of objects. See [Message structure](#message-structure) for details. Example: `[{ key: 'my-key', value: 'my-value'}]`                                                                                                                                          |                              | `Message[]` | **Yes**  |
| acks               | Control the number of required acks. __-1__ = all insync replicas must acknowledge _(default)_ __0__ = no acknowledgments __1__ = only waits for the leader to acknowledge                                                                                                                                                         | `-1` all insync replicas | `Number` | No       |
| timeout            | The time to await a response in ms                                                                                                                                                                                                                                                                                                         | `30000`                            | `Number` | No       |
| compression        | Compression codec                                                                                                                                                                                                                                                                                                                          | `CompressionTypes.None`            | `CompressionTypes` | No       |

### Return value

`send` returns a `Promise<RecordMetadata[]>` where each `RecordMetadata` contains:

| property       | description                                                 | type     |
|----------------|-------------------------------------------------------------|----------|
| topicName      | The topic name the record was sent to                       | `String` |
| partition      | The partition the record was sent to                        | `Number` |
| errorCode      | Error code from broker (0 = success)                        | `Number` |
| offset         | The offset of the record in the partition                   | `String` |
| timestamp      | The timestamp of the record                                 | `String` |
| baseOffset     | The base offset of the record batch                         | `String` |
| logAppendTime  | The time the broker appended the record to the log          | `String` |
| logStartOffset | The start offset of the log at the time of this append      | `String` |

### Message structure

Messages have the following properties:

| Property  | Description                                                                                                                                                                                                             | Default      | Type | Required |
| ----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|--------------|------|----------|
| key       | Used for partitioning. See [Key](#message-key)                                                                                                                                                                          |              | `Buffer \| String \| null` | No |
| value     | Your message content. The value can be a `Buffer`, a `string` or `null`. The value will always be encoded as bytes when sent to Kafka. When consumed, the consumer will need to interpret the value according to your schema. |              | `Buffer \| String \| null` | **Yes** |
| partition | Which partition to send the message to. See [Key](#message-key) for details on how the partition is decided if this property is omitted.                                                                                |              | `Number` | No |
| timestamp | The timestamp of when the message was created. See [Timestamp](#message-timestamp) for details.                                                                                                                         | `Date.now()` | `String` | No |
| headers   | Metadata to associate with your message. See [Headers](#message-headers).                                                                                                                                               |              | `Object` | No |

#### <a name="message-key"></a>Key

The message `key` is used to decide which partition the message will be sent to. This is important to ensure that messages relating to the same aggregate are processed in order. For example, if you use an `orderId` as the key, you can ensure that all messages regarding that order will be processed in order.

By default, the producer is configured to distribute the messages with the following logic:

- If a partition is specified in the message, use it
- If no partition is specified but a key is present choose a partition based on a hash (murmur2) of the key
- If no partition or key is present choose a partition in a round-robin fashion

#### <a name="message-timestamp"></a>Timestamp

Each message has a timestamp in the form of a UTC timestamp with millisecond precision as a string. If no timestamp was provided, the producer will use the current time as the timestamp. When the message is consumed, the broker may override this timestamp depending on the topic configuration:

* If the topic is configured to use CreateTime, the timestamp from the producer's message will be used.
* If the topic is configured to use LogAppendTime, the timestamp will be overwritten by the broker with the broker local time when it appends the message to its log.

#### <a name="message-headers"></a>Headers

Kafka v0.11 introduces record headers, which allows your messages to carry extra metadata. To send headers with your message, include the key `headers` with the values. Example:

```javascript
await producer.send({
    topic: 'topic-name',
    messages: [{
        key: 'key1',
        value: 'hello world',
        headers: {
            'correlation-id': '2bfb68bb-893a-423b-a7fa-7b568cad5b67',
            'system-id': 'my-system',
        }
    }]
})
```

A header value can be a `string`, a `Buffer`, or an array of `string | Buffer`.

## Producing to multiple topics

To produce to multiple topics at the same time, use `sendBatch`. This can be useful, for example, when migrating between two topics.

```javascript
const topicMessages = [
  {
    topic: 'topic-a',
    messages: [{ key: 'key', value: 'hello topic-a' }],
  },
  {
    topic: 'topic-b',
    messages: [{ key: 'key', value: 'hello topic-b' }],
  },
  {
    topic: 'topic-c',
    messages: [
      {
        key: 'key',
        value: 'hello topic-c',
        headers: {
          'correlation-id': '2bfb68bb-893a-423b-a7fa-7b568cad5b67',
        },
      }
    ],
  }
]
await producer.sendBatch({ topicMessages })
```

`sendBatch` has the same signature as `send`, except `topic` and `messages` are replaced with `topicMessages`:

```javascript
await producer.sendBatch({
    topicMessages: <TopicMessages[]>,
    acks: <Number>,
    timeout: <Number>,
    compression: <CompressionTypes>,
})
```

| property      | description                                                                                                | default | type | required |
| ------------- | ---------------------------------------------------------------------------------------------------------- | ------- | ---- | -------- |
| topicMessages | An array of objects with `topic` and `messages`. `messages` is an array of the same type as for `send`. |         | `TopicMessages[]` | **Yes** |
| acks          | Same as `send`                                                                                              | `-1`   | `Number` | No |
| timeout       | Same as `send`                                                                                              | `30000` | `Number` | No |
| compression   | Same as `send`                                                                                              | `CompressionTypes.None` | `CompressionTypes` | No |

## <a name="custom-partitioner"></a> Custom partitioner

It's possible to assign a custom partitioner to the producer. A partitioner is a function which returns another function responsible for the partition selection, something like this:

```javascript
const MyPartitioner = () => {
    return ({ topic, partitionMetadata, message }) => {
        // select a partition based on some logic
        // return the partition number
        return 0
    }
}
```

`partitionMetadata` is an array of partitions with the following structure:

`{ partitionId: <NodeId>, leader: <NodeId> }`

Example:

```javascript
[
    { partitionId: 1, leader: 1 },
    { partitionId: 2, leader: 2 },
    { partitionId: 0, leader: 0 }
]
```

To use your custom partitioner, use the option `createPartitioner` when creating the producer.

```javascript
kafka.producer({ createPartitioner: MyPartitioner })
```

### Default Partitioners

KafkaJS ships with 2 partitioners: `DefaultPartitioner` and `LegacyPartitioner`.

The `DefaultPartitioner` should be compatible with the default partitioner that ships with the Java Kafka client. This can be important to meet the [co-partitioning requirement](https://docs.confluent.io/current/ksql/docs/developer-guide/partition-data.html#co-partitioning-requirements) when joining multiple topics.

> **Important**
>
> **The `LegacyPartitioner` was the default until v2.0.0. If you are upgrading from a version
older and want to retain the previous partitioning behavior, use the `LegacyPartitioner`
by importing it and providing it to the Producer constructor:**
>
> ```javascript
> const { Partitioners } = require('kafkajs')
> kafka.producer({ createPartitioner: Partitioners.LegacyPartitioner })
> ```
>
> **`Partitioners.JavaCompatiblePartitioner` is deprecated** — it was renamed to `Partitioners.DefaultPartitioner` in v2.0.0. Using `JavaCompatiblePartitioner` still works but will emit a deprecation warning.

## <a name="retry"></a> Retry

The option `retry` can be used to customize the configuration for the producer.

Take a look at [Retry](Configuration.md#default-retry) for more information.

## <a name="compression"></a> Compression

Since KafkaJS aims to have as small footprint and as few dependencies as possible, only the GZIP codec is part of the core functionality, other codecs are available as packages.

### <a name="compression-gzip"></a> GZIP

```javascript
const { CompressionTypes } = require('kafkajs')

async () => {
  await producer.send({
    topic: 'topic-name',
    compression: CompressionTypes.GZIP,
    messages: [
        { key: 'key1', value: 'hello world' },
        { key: 'key2', value: 'hey hey!' }
    ],
  })
}
```

The consumers know how to decompress GZIP, so no further work is necessary.

### <a name="compression-snappy"></a> Snappy

Snappy support is provided by the package `kafkajs-snappy`

```sh
npm install --save kafkajs-snappy
# yarn add kafkajs-snappy
```

```javascript
const {  CompressionTypes, CompressionCodecs } = require('kafkajs')
const SnappyCodec = require('kafkajs-snappy')

CompressionCodecs[CompressionTypes.Snappy] = SnappyCodec
```

Take a look at the official [readme](https://github.com/tulios/kafkajs-snappy) for more information

### <a name="compression-lz4"></a> LZ4

LZ4 support is provided by the package `kafkajs-lz4`

```sh
npm install --save kafkajs-lz4
# yarn add kafkajs-lz4
```

```javascript
const { CompressionTypes, CompressionCodecs } = require('kafkajs')
const LZ4 = require('kafkajs-lz4')

CompressionCodecs[CompressionTypes.LZ4] = new LZ4().codec
```

The package also accepts options to granularly control LZ4 compression & decompression. Take a look at the official [readme](https://github.com/indix/kafkajs-lz4) for more information.

### <a name="compression-zstd"></a> ZSTD

Zstandard support is provided by [`@kafkajs/zstd`](https://github.com/kafkajs/zstd)

```sh
npm install --save @kafkajs/zstd
# yarn add @kafkajs/zstd
```

```javascript
const { CompressionTypes, CompressionCodecs } = require('kafkajs')
const ZstdCodec = require('@kafkajs/zstd')

CompressionCodecs[CompressionTypes.ZSTD] = ZstdCodec()
```

Configuration options can be passed to the factory function to control compression & decompression levels and other features. See [the official readme](https://github.com/kafkajs/zstd) for more information.

### <a name="compression-other"></a> Other

Any other codec can be easily implemented using existing libraries.

A codec is an object with two `async` functions: `compress` and `decompress`. Import the libraries and define the codec object:

```javascript
const MyCustomSnappyCodec = {
    async compress(encoder) {
        return someCompressFunction(encoder.buffer)
    },

    async decompress(buffer) {
        return someDecompressFunction(buffer)
    }
}
```

Now that we have the codec object, we can wrap it in a function and add it to the implementation:

```javascript
const { CompressionTypes, CompressionCodecs } = require('kafkajs')
CompressionCodecs[CompressionTypes.Snappy] = () => MyCustomSnappyCodec
```

The new codec can now be used with the `send` method, example:

```javascript
await producer.send({
    topic: 'topic-name',
    compression: CompressionTypes.Snappy,
    messages: [
        { key: 'key1', value: 'hello world' },
        { key: 'key2', value: 'hey hey!' }
    ],
})
```

## <a name="idempotent-producer"></a> Idempotent Producer

Enabling idempotent producer ensures each message is written exactly once, avoiding duplicates caused by retries:

```javascript
const producer = kafka.producer({
  idempotent: true,
  maxInFlightRequests: 5,
})
```

When `idempotent` is `true`:
- `acks` is automatically set to `-1` (all)
- `retries` defaults to `MAX_SAFE_INTEGER`
- `maxInFlightRequests` must be `<= 5` (Kafka protocol requirement)

You can check if a producer instance is idempotent:

```javascript
producer.isIdempotent() // true or false
```

## <a name="instrumentation-events"></a> Instrumentation Events

The producer emits instrumentation events that can be used for monitoring:

```javascript
const { CONNECT, DISCONNECT, REQUEST, REQUEST_TIMEOUT, REQUEST_QUEUE_SIZE } = producer.events

producer.on(CONNECT, e => console.log(`Producer connected at ${e.timestamp}`))
producer.on(DISCONNECT, e => console.log(`Producer disconnected at ${e.timestamp}`))
producer.on(REQUEST, e => console.log(`Request to ${e.payload.broker}`, e.payload))
producer.on(REQUEST_TIMEOUT, e => console.log(`Request timeout`, e.payload))
producer.on(REQUEST_QUEUE_SIZE, e => console.log(`Queue size: ${e.payload.queueSize}`))
```

The `on` method returns a function to remove the listener:

```javascript
const removeListener = producer.on(producer.events.REQUEST, e => {})
removeListener() // stop listening
```

## <a name="kraft-mode"></a> KRaft Mode (Kafka 4.0+)

KafkaJS works identically with KRaft-based clusters (Kafka 4.0+). No code changes are required:

```javascript
const { Kafka, CompressionTypes, Partitioners } = require('kafkajs')

const kafka = new Kafka({
  brokers: ['localhost:9092'],
  clientId: 'kraft-producer',
})

const producer = kafka.producer({
  createPartitioner: Partitioners.DefaultPartitioner,
  idempotent: true,
})

const run = async () => {
  await producer.connect()

  await producer.send({
    topic: 'kraft-topic',
    compression: CompressionTypes.GZIP,
    messages: [
      {
        key: 'key-1',
        value: JSON.stringify({ message: 'Hello from KRaft!' }),
        headers: { source: 'kafkajs' },
      },
    ],
  })

  await producer.disconnect()
}

run().catch(console.error)
```
